# gpc-cil

./: .gitignore  AUTHORS  Makefile.am  autogen.sh  configure.in
Gpc/: AssemblyInfo.cs.in  ClipTest.cs  Clipper.cs  GeomTest.cs  IPoly.cs  OperationType.cs  PolyDefault.cs  PolyDefaultTest.cs  PolySimple.cs  VertexType.cs
etc/: Gpc.snk  gpc-sharp-0.0.pc.in
